# aquavect-engine

./: README.md  pyproject.toml
aquavect/: README.md  __init__.py  __main__.py  agents.py  aggregation.py  benchmark.py  datagen.py  formatting.py  pyproject.toml  simulation.py
aquavect-engine/: pyproject.toml
aquavect-engine/aquavect/: formatting.py  networks.py  viz.py
aquavect-engine/aquavect.egg-info/: PKG-INFO  top_level.txt
aquavect-engine/tests/: test_aquavect.py
aquavect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aquavect/aquavect/: __init__.py  metrics.py
aquavect/aquavect.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: generate_dataset.py  reproduce_paper1.py  reproduce_paper2.py
scripts/: README.md
tests/: test_new_modules.py
