[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquavect"
version = "0.3.0"
description = "Agent-based network epistemology simulation engine for studying manufactured ignorance, information aggregation, and strategic interaction in epistemic communities."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
full = [
    "pandas>=2.0",
    "pyarrow>=12.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "joblib>=1.3",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["aquavect*"]
